2008-01-29 Brian Matherly <brian@gramps-project.org>
	* src/docgen.ODFDoc.py: escape characters in image names for ODF output.

2008-01-29  Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/ViewManager.py: 0001641: add ... ellipsis to menu items. 
	* src/plugins/Calendar.py: 0001641: add ... ellipsis to menu items. 
	* src/PluginUtils/__init__.py: pep8 fixes
	* src/PluginUtils/_PluginMgr.py: pylint and doc fixes

2008-01-29 Peter Landgren <peter.talken@telia.com>
    * src/plugins/ExportVCalendar.py: 
    * src/plugins/ExportVCard.py:
      Encoding according to sys.getfilesystemencoding() in stead of hardcoded 
      iso-8859-1

2008-01-29  Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/plugins/EventNames.py: doc fixes and removal of self.label

2008-01-29 Gary Burton <gary.burton@zen.co.uk>
	* src/plugins/TimeLine.py:
	* src/Sort.py: Use fallback events e.g. baptism/burial when no birth or
	death events are available.

2008-01-29 Peter Landgren <peter.talken@telia.com>
    * src/plugins/ChangeNames.py: Improved capitalization rules for names with
    one prefix and multiple surnames with or without hyphen(s)

2008-01-28 Duncan Lithgow <dlithgow@gmail.com>
           Raphael Ackermann <raphael.ackermann@gmail.com>
	*  src/plugins/Summary.py
	*  src/plugins/WebCal.py
	*  src/plugins/KinshipReport.py
	*  src/plugins/DescendReport.py
	*  src/plugins/DetDescendantReport.py
	*  src/plugins/ExtractCity.py
	*  src/plugins/EventNames.py
	*  src/plugins/DumpGenderStats.py
	*  src/plugins/Desbrowser.py
	*  src/plugins/Checkpoint.py
	*  src/plugins/OwnerEditor.py
	*  src/plugins/ChangeNames.py
	*  src/plugins/AncestorReport.py
	*  src/plugins/MarkerReport.py
	*  src/plugins/DateParserDisplayTest.py
	*  src/plugins/FindDupes.py
	*  src/plugins/SoundGen.py
	*  src/plugins/TestcaseGenerator.py
	*  src/plugins/Rebuild.py
	*  src/plugins/DescendChart.py
	*  src/plugins/EndOfLineReport.py
	*  src/plugins/AncestorChart.py
	*  src/plugins/DetAncestralReport.py