@@ -1,4 +1,7 @@
 2008-01-29 Brian Matherly <brian@gramps-project.org>
+	* src/PluginUtils/_GuiOptions.py: Default GuiOptions to use active person.
+
+2008-01-29 Brian Matherly <brian@gramps-project.org>
 	* src/docgen.ODFDoc.py: escape characters in image names for ODF output.
 
 2008-01-29  Raphael Ackermann <raphael.ackermann@gmail.com>
